# d

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AchievementBadge.tsx  AchievementsModal.tsx  ClientCard.tsx  ClientSection.tsx  ClientSelector.tsx  CommentsModal.tsx  DmcaGenerator.tsx  EffortSelector.tsx  FocusSessionTracker.tsx  FocusView.tsx  HistoryPanel.tsx  LevelProgress.tsx  NotificationToast.tsx  PrioritySelector.tsx  ProductivityHealth.tsx  ProfileEditor.tsx  ProgressChart.tsx  QuickTaskBar.tsx  SettingsModal.tsx  SimpleListItem.tsx  SortableTaskItem.tsx  StatsCard.tsx  StatsDashboard.tsx  StreakFlame.tsx  TimePrediction.tsx  WeeklyReview.tsx
src/constants/: dmcaPrompts.ts  index.ts
src/hooks/: useAppState.ts  useAudioEngine.ts  useClients.ts  useConfetti.ts  useFocusSessions.ts  useGamification.ts  useHistory.ts  useNotifications.ts  useSettings.ts  useZenData.ts
src/services/: aiService.ts
src/types/: analytics.ts  core.ts  gamification.ts  index.ts
src/utils/: analyticsUtils.test.ts  analyticsUtils.ts  dateUtils.test.ts  dateUtils.ts  gamificationUtils.test.ts  gamificationUtils.ts  index.ts  logger.ts  taskScoring.ts  validation.ts
